# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Nov 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.14.ebuild, froxlor-9999.ebuild:
  fix typo for #463

  02 Nov 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.14.ebuild, froxlor-9999.ebuild:
  depend on correct SAPI for lighttpd

*froxlor-0.9.14 (25 Oct 2010)

  25 Oct 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.13.1.ebuild, +froxlor-0.9.14.ebuild:
  version bump, remove old

  23 Oct 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild, metadata.xml:
  remove realtime useflag

*froxlor-0.9.13.1 (01 Oct 2010)

  01 Oct 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.13.ebuild, +froxlor-0.9.13.1.ebuild, froxlor-9999.ebuild:
  version bump, remove old

*froxlor-0.9.13 (27 Sep 2010)

  27 Sep 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.12.ebuild, +froxlor-0.9.13.ebuild:
  version bump, remove old

  24 Sep 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  added php.ini for Froxlors own vhost

  03 Sep 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.12.ebuild, froxlor-9999.ebuild:
  fix typo, thanks to Emilien

*froxlor-0.9.12 (23 Aug 2010)

  23 Aug 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.11.ebuild, +froxlor-0.9.12.ebuild:
  version bump, remove old

  09 Aug 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild, metadata.xml:
  add pureftpd support, fix disabling inserttask statement when bind useflag
  is not set

*froxlor-0.9.11 (26 Jul 2010)

  26 Jul 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.10.ebuild, +froxlor-0.9.11.ebuild:
  version bump

  15 Jul 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  remove conditional dependency on dovecot 1.1 as per gentoo security bug
  #314533
