@@ -1,0 +1,33 @@
+# Basic system aliases -- these MUST be present.
+MAILER-DAEMON:      postmaster
+postmaster:         root
+
+# General redirections for pseudo accounts.
+adm:                root
+bin:                root
+daemon:             root
+exim:               root
+lp:                 root
+mail:               root
+named:              root
+nobody:             root
+postfix:            root
+
+# Well-known aliases -- these should be filled in!
+root: <ADMIN_MAIL>
+# operator:
+
+# Standard RFC2142 aliases
+abuse:              postmaster
+ftp:                root
+hostmaster:         root
+news:               usenet
+noc:                root
+security:           root
+usenet:             root
+uucp:               root
+webmaster:          root
+www:                webmaster
+
+# trap decode to catch security attacks
+# decode:           /dev/null
