@@ -324,6 +324,7 @@ src_install() {
 	cp "${FILESDIR}/froxlor.cron" "${D}/usr/share/${PN}"
 	cp "${FILESDIR}/php-fcgi-starter" "${D}/usr/share/${PN}"
 	cp "${FILESDIR}/php.ini" "${D}/usr/share/${PN}"
+	cp "${FILESDIR}/aliases" "${D}/usr/share/${PN}"
 }
 
 pkg_postinst() {
@@ -1116,6 +1117,14 @@ ssl.ca-file = \"${ROOT}etc/ssl/server/${servername}.pem\"
 	if useq domainkey && useq bind ; then
 		cat "${ROOT}/usr/share/${PN}/domainkey.conf" >> "${ROOT}/etc/postfix/main.cf"
 	fi
+
+	# create postfix aliases.db, #412
+	einfo "Creating aliases.db for postfix ..."
+	rm -f "${ROOT}/etc/mail/aliases"
+	insinto "${ROOT}/etc/mail"
+	newins "${ROOT}/usr/share/${PN}/aliases" aliases
+	sed -e "s|<ADMIN_MAIL>|root@${servername}|g" -i "${ROOT}/etc/mail/aliases"
+	/usr/bin/newaliases
 
 	# Automatical Bind configuration, if Bind is installed
 	if useq bind ; then
